syntax = "proto3";
package proofs;

// Service for proof requests
service Proofs {
  // Request an aggregation proof
  rpc RequestAggProof(AggProofRequest) returns (AggProofResponse);
}

// Request for an aggregation proof
message AggProofRequest {
  int64 start = 1;
  int64 end = 2;
  int64 l1_block_number = 3;
  bytes l1_block_hash = 4;
}

// Response from an aggregation proof request
message AggProofResponse {
  bool success = 1;
  string error = 2;
  int64 request_id = 3;
}
